# npi-mcp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
src/: client.py  main.py
src/domain/: enums.py  models.py
tests/: conftest.py
tests/cassettes/: search_by_name.yaml  search_by_name_no_results.yaml  search_by_npi_number.yaml  search_by_npi_number_tool.yaml  search_by_organization_name.yaml  search_with_error.yaml
tests/unit/: test_models.py  test_npi_client.py  test_tools.py
